# ga4-bq-dbt

./: .gitignore  README.md  data_analysis.ipynb  pyproject.toml  run_dbt.sh
dbt_project/: .user.yml  dbt_project.yml  package-lock.yml  profiles.yml
dbt_project/models/overrides/staging/base/: base_ga4__events.sql
