[project]
name = "ga4-bq-dbt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-bigquery>=1.10.1",
    "dbt-core>=1.10.7",
    "google-cloud-bigquery>=3.35.1",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "pandas-gbq>=0.29.2",
    "python-dotenv>=1.1.1",
    "seaborn>=0.13.2",
]
